Fixed wrapping on the about and 404 page.  Removed some padding from the custom CSS.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -22,7 +22,7 @@
 
 html, body { height: 100%; }
 
-body { background-color:#f5f5f5; color:#6D6D6D; font-family: "Roboto", Helvetica, Arial, sans-serif; }
+body {padding-top: 100px; background-color:#f5f5f5; color:#6D6D6D; font-family: "Roboto", Helvetica, Arial, sans-serif; }
 
 h1, h2, h3, h4, h5, h6 { font-weight: 600; font-family: "Roboto Slab", Times, serif; }
 
@@ -113,7 +113,7 @@ h1 small { padding-left: 15px; }
 
 
 .about-section {float:left;position: fixed;padding:0;width:inherit;}
-.main-content-section {padding-top:100px;}
+/*.main-content-section {padding-top:100px;}*/
 
 .row .col-md-10 {padding:0;}
 /*.evenrow .col-md-6 {padding-right: 0;}*/
@@ -256,4 +256,3 @@ input[type=search], input[type=search]:focus { height: 100%; -webkit-box-shadow:
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 @media (max-width: 768px) { .container { width: auto; margin-right: auto; margin-left: auto; }
 .forkme { display: none; } }
-
